--- a/Casino/Casino.csproj
+++ b/Casino/Casino.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Casino.DataAccess\Casino.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
